// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownParser parseLinks parses a simple link 1`] = `
<div>
  <span>
    hi there 
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      href="http://link.com"
      style="color: blue;"
      target="_blank"
    >
      Linktekst
    </a>
  </span>
</div>
`;

exports[`MarkdownParser parseLinks parses a simple link 2`] = `
<div>
  <span>
    hi there 
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      href="http://link.com"
      style="color: blue;"
      target="_blank"
    >
      Linktekst
    </a>
  </span>
</div>
`;

exports[`MarkdownParser parseLinks parses boldness etc of two simple link names if needed 1`] = `
<div>
  <span>
    hi there 
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      href="http://link.com"
      style="color: blue;"
      target="_blank"
    >
      **Linktekst1**
    </a>
    <span>
       and 
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        href="http://link.com"
        style="color: blue;"
        target="_blank"
      >
        _Linktekst2_
      </a>
    </span>
  </span>
</div>
`;

exports[`MarkdownParser parseLinks parses boldness etc of two simple link names if needed 2`] = `
<div>
  <span>
    hi there 
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      href="http://link.com"
      style="color: blue;"
      target="_blank"
    >
      <span>
        
        <span
          style="font-weight: bold;"
        >
          Linktekst1
        </span>
      </span>
    </a>
    <span>
       and 
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        href="http://link.com"
        style="color: blue;"
        target="_blank"
      >
        <span>
          
          <span
            style="font-style: italic;"
          >
            Linktekst2
          </span>
        </span>
      </a>
    </span>
  </span>
</div>
`;

exports[`MarkdownParser parseLinks parses link in title 1`] = `
<div>
  <div
    style="margin-top: 0px; margin-left: 0px; margin-right: 15px;"
  >
    <h1
      class="MuiTypography-root MuiTypography-h6 MuiTypography-colorInherit"
    >
      <span>
        hi there 
        <a
          class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
          href="http://link.com"
          style="color: blue;"
          target="_blank"
        >
          **Linktekst1**
        </a>
        <span>
           and 
          <a
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            href="http://link.com"
            style="color: blue;"
            target="_blank"
          >
            _Linktekst2_
          </a>
        </span>
      </span>
    </h1>
  </div>
</div>
`;

exports[`MarkdownParser parseLinks parses two simple links 1`] = `
<div>
  <span>
    hi there 
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      href="http://link.com"
      style="color: blue;"
      target="_blank"
    >
      Linktekst1
    </a>
    <span>
       and 
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        href="http://link.com"
        style="color: blue;"
        target="_blank"
      >
        Linktekst2
      </a>
    </span>
  </span>
</div>
`;

exports[`MarkdownParser parseLinks parses two simple links 2`] = `
<div>
  <span>
    hi there 
    <a
      class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      href="http://link.com"
      style="color: blue;"
      target="_blank"
    >
      Linktekst1
    </a>
    <span>
       and 
      <a
        class="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        href="http://link.com"
        style="color: blue;"
        target="_blank"
      >
        Linktekst2
      </a>
    </span>
  </span>
</div>
`;

exports[`MarkdownParser parseLists parses a simple list with one items 1`] = `
<div>
  <div
    style="margin-top: 0px; margin-left: 0px; margin-right: 15px;"
  >
    <ul>
      <li>
        item
      </li>
    </ul>
  </div>
</div>
`;

exports[`MarkdownParser parseLists parses a simple list with three items 1`] = `
<div>
  <div
    style="margin-top: 0px; margin-left: 0px; margin-right: 15px;"
  >
    <ul>
      <li>
        item
      </li>
      <li>
        item2
      </li>
      <li>
        item3
      </li>
    </ul>
  </div>
</div>
`;

exports[`MarkdownParser parseLists parses a simple list with three items and bold and underscored values 1`] = `
<div>
  <div
    style="margin-top: 0px; margin-left: 0px; margin-right: 15px;"
  >
    <ul>
      <li>
        <span>
          
          <span
            style="font-weight: bold;"
          >
            item
          </span>
        </span>
      </li>
      <li>
        <span>
          
          <span
            style="font-style: italic;"
          >
            item2
          </span>
        </span>
      </li>
      <li>
        item3
      </li>
    </ul>
  </div>
</div>
`;

exports[`MarkdownParser parseLists parses two lists 1`] = `
<div>
  <div
    style="margin-top: 0px; margin-left: 0px; margin-right: 15px;"
  >
    Text before
  </div>
  <div
    style="margin-top: 15px; margin-left: 15px; margin-right: 15px;"
  >
    <ul>
      <li>
        one item
      </li>
    </ul>
  </div>
  <div
    style="margin-top: 15px; margin-left: 15px; margin-right: 15px;"
  >
    Text between
  </div>
  <div
    style="margin-top: 15px; margin-left: 15px; margin-right: 15px;"
  >
    <ul>
      <li>
        item
      </li>
      <li>
        item2
      </li>
      <li>
        item3
      </li>
    </ul>
  </div>
  <div
    style="margin-top: 15px; margin-left: 15px; margin-right: 15px;"
  >
    Text After
  </div>
</div>
`;

exports[`MarkdownParser parseMultiples works with 0 1`] = `
<div>
  <span>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
      0 questions
    </span>
  </span>
</div>
`;

exports[`MarkdownParser parseMultiples works with 0 2`] = `
<div>
  <span>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
      0 questions
    </span>
  </span>
</div>
`;

exports[`MarkdownParser parseMultiples works with 1 1`] = `
<div>
  <span>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
      1 question
    </span>
  </span>
</div>
`;

exports[`MarkdownParser parseMultiples works with 1 2`] = `
<div>
  <span>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
      1 question
    </span>
  </span>
</div>
`;

exports[`MarkdownParser parseMultiples works with 10 1`] = `
<div>
  <span>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
      10 questions
    </span>
  </span>
</div>
`;

exports[`MarkdownParser parseMultiples works with 10 2`] = `
<div>
  <span>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
      10 questions
    </span>
  </span>
</div>
`;

exports[`MarkdownParser parseText shows right text for bold in italic text 1`] = `
<div>
  <span>
    Test 
    <span
      style="font-style: italic;"
    >
      <span>
        this with some 
        <span
          style="font-weight: bold;"
        >
          italic
        </span>
      </span>
    </span>
     text.
  </span>
</div>
`;

exports[`MarkdownParser parseText shows right text for bold text 1`] = `
<div>
  <span>
    Test 
    <span
      style="font-weight: bold;"
    >
      this
    </span>
    <span>
       with some 
      <span
        style="font-weight: bold;"
      >
        bold
      </span>
       text.
    </span>
  </span>
</div>
`;

exports[`MarkdownParser parseText shows right text for italic in bold text 1`] = `
<div>
  <span>
    Test 
    <span
      style="font-weight: bold;"
    >
      <span>
        this with some 
        <span
          style="font-style: italic;"
        >
          bold
        </span>
      </span>
    </span>
     text.
  </span>
</div>
`;

exports[`MarkdownParser parseText shows right text for italic text 1`] = `
<div>
  <span>
    Test 
    <span
      style="font-style: italic;"
    >
      this
    </span>
    <span>
       with some 
      <span
        style="font-style: italic;"
      >
        italic
      </span>
       text.
    </span>
  </span>
</div>
`;
